--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=ssd-auth-project
 server.port=8081
+
+#path to credentials.json
+google.secret.key.path=file:${user.dir}\\src\\main\\resources\\key\\credentials.json
+
+#path to store credentials once authentication is successful
+google.credentials.folder.path=file:${user.dir}\\src\\main\\resources\\credentials
+
+#0uth callback url
+google.oauth.callback.uri=http://localhost:8080/oauth/callback
+
+#upload file max file size and request size
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+spring.http.multipart.enabled=true
